# SDHLT

./: .gitignore  CMakeLists.txt  README.md
src/: cleanup.bat
src/common/: arguments.cpp  arguments.h  blockmem.cpp  blockmem.h  boundingbox.h  bspfile.cpp  bspfile.h  cmdlib.cpp  cmdlib.h  filelib.cpp  filelib.h  hlassert.h  log.cpp  log.h  maplib.cpp  maplib.h  mathlib.cpp  mathlib.h  messages.cpp  messages.h  parser.cpp  parser.h  scriplib.cpp  threads.cpp  threads.h  win32fix.h  winding.cpp  winding.h
src/sBSP/: brink.cpp  bsp5.h  hlbsp.cpp  hlbsp.h  merge.cpp  outside.cpp  portals.cpp  qbsp.cpp  solidbsp.cpp  surfaces.cpp  tjunc.cpp  writebsp.cpp
src/sCSG/: brush.cpp  brush.h  brushunion.cpp  csg.h  face.h  hlcsg.cpp  hlcsg.h  hull.cpp  hull.h  hullfile.cpp  map.cpp  map.h  qcsg.cpp  textures.cpp  textures.h  wadpath.cpp  wadpath.h
src/sMCT/: Makefile
src/sMCT/common/: arguments.cpp  arguments.h  blockmem.cpp  blockmem.h  boundingbox.h  bspfile.cpp  bspfile.h  cmdlib.cpp  cmdlib.h  cmdlinecfg.h  log.cpp  mathlib.cpp  resourcelock.cpp  studio.h  winding.cpp  winding.h
src/sMCT/sBSP/: brink.cpp  bsp5.h  merge.cpp  outside.cpp  portals.cpp  qbsp.cpp  solidbsp.cpp  surfaces.cpp  tjunc.cpp  writebsp.cpp
src/sMCT/sCSG/: ansitoutf8.cpp  brush.cpp  csg.h  qcsg.cpp  textures.cpp
src/sMCT/sRAD/: lerp.cpp  list.h  loadtextures.cpp  mathutil.cpp  meshtrace.cpp  meshtrace.h  qrad.cpp  qrad.h  qradutil.cpp  studio.cpp  trace.cpp
src/sMCT/sVIS/: vis.cpp  vis.h
src/sRAD/: compress.cpp  compress.h  hlrad.cpp  hlrad.h  hlradutil.cpp  lerp.cpp  lightmap.cpp  loadtextures.cpp  mathutil.cpp  qrad.cpp  qrad.h  qradutil.cpp  sparse.cpp  trace.cpp  transfers.cpp  transparency.cpp  vismatrix.cpp  vismatrixutil.cpp
src/sVIS/: flow.cpp  hlvis.cpp  hlvis.h  vis.cpp  vis.h
src/sdhlt/: Makefile  sdhlt.sln
src/sdhlt/common/: TimeCounter.h  arguments.cpp  arguments.h  blockmem.cpp  blockmem.h  boundingbox.h  bspfile.cpp  bspfile.h  cmdlib.cpp  cmdlib.h  cmdlinecfg.cpp  cmdlinecfg.h  filelib.cpp  filelib.h  hlassert.h  log.cpp  log.h  mathlib.cpp  mathlib.h  messages.cpp  messages.h  resourcelock.cpp  resourcelock.h  scriplib.cpp  scriplib.h  stringlib.h  studio.h  threads.cpp  threads.h  vec.h  win32fix.h  winding.cpp  winding.h
src/sdhlt/sdHLBSP/: brink.cpp  bsp5.h  merge.cpp  outside.cpp  portals.cpp  qbsp.cpp  solidbsp.cpp  surfaces.cpp  tjunc.cpp  writebsp.cpp
src/sdhlt/sdHLCSG/: brush.cpp  brushunion.cpp  csg.h  hullfile.cpp  map.cpp  qcsg.cpp  sdHLCSG.vcproj  textures.cpp  wadcfg.cpp  wadpath.cpp  wadpath.h
src/sdhlt/sdHLRAD/: compress.cpp  compress.h  lerp.cpp  lightmap.cpp  list.h  loadtextures.cpp  mathutil.cpp  meshdesc.cpp  meshdesc.h  meshtrace.cpp  meshtrace.h  nomatrix.cpp  progmesh.cpp  qrad.cpp  qrad.h  qradutil.cpp  sparse.cpp  stringlib.cpp  studio.cpp  trace.cpp  transfers.cpp  transparency.cpp  vismatrix.cpp  vismatrixutil.cpp
src/sdhlt/sdHLVIS/: flow.cpp  vis.cpp  vis.h
src/sdhlt/sdRIPENT/: ripent.cpp
src/sdhlt/template/: BaseMath.h  EndianMath.h  ReferenceArray.h  ReferenceCounter.h  ReferenceObject.h  ReferencePtr.h
tools/: settings.txt
